Markdown: allow attributes in reference links to start on next line.
This addresses a subsidiary issue in #3674.

--- a/test/command/3674.md
+++ b/test/command/3674.md
@@ -24,3 +24,16 @@ Make sure we don't get duplicate reference links, even with
 
   [2]: b
 ```
+
+Subsidiary issue:  allow line break between reference link
+url/title and attributes:
+
+```
+% pandoc
+[a]
+
+[a]: url
+{.class}
+^D
+<p><a href="url" class="class">a</a></p>
+```
