Update command tests to include stderr output.

--- a/test/command/3577.md
+++ b/test/command/3577.md
@@ -1,5 +1,5 @@
 ```
-% pandoc -f latex -t html5
+% pandoc -f latex -t html5 --quiet
 \begin{figure}[ht]
     \begin{subfigure}{0.45\textwidth}
         \centering
