fixed many bugs. next: meta

--- a/test/vimwiki-reader.wiki
+++ b/test/vimwiki-reader.wiki
@@ -2,15 +2,19 @@
 
 == header level two ==
 
-===header level 3===
+=== header `level` 3 ===
 
-====header ''level'' four====
+==== header ~~level~~ four ====
 
-===== header level 5 =====
+===== header _*level* 5_ =====
 
 ====== header level 6 ======
 
 ======= not a header ========
+
+=n=
+==f==
+===f===
 
  == centred header ==
 
