--- a/test/vimwiki-reader.wiki
+++ b/test/vimwiki-reader.wiki
@@ -1,3 +1,4 @@
+= _*implemented*_ =
 = header =
 
 == header level two ==
@@ -12,9 +13,15 @@
 
 ======= not a header ========
 
+hi== not a header ==
+
+=== not a header ==
+
+=== not a header ===-
+
+not a header:
+
 =n=
-==f==
-===f===
 
  == centred header ==
 
@@ -36,43 +43,27 @@ _*strong inside* emph_
 
 top
 ----
+middle
+
+-------
+
 bottom
-
-----
-
 == strikeout ==
 
-~~This is _struck out_~~
+~~This is _struck out_~~ with emph
 
 == comments ==
 
+%% you can't see me.
+
+this 
 %% secret
-
-inline %% not secret
-
-== linebreaks ==
-
-hi<br/>there
-
-hi<br>
-there
-
-== sup, sub ==
-
-super^script^
-
-sub,,script,,
+is %% not secret
 
 == inline code ==
 
 Here is some `inline code`.
 
-== code blocks ==
-
- {{{python
- for i in range(1, 5):
-     print(i)
- }}}
 
 == preformatted text ==
 
@@ -90,9 +81,9 @@ Here is some `inline code`.
 
 == block quotes ==
 
-    This would be a blockquote in Vimwiki. It is not highlighted in Vim but
+    This would be a blockquote in Vimwiki. It is not *highlighted* in Vim but
     could be styled by CSS in HTML. Blockquotes are usually used to quote a
-    long piece of text from another source.
+    long piece of text from another source. ~~blah blah~~ :blockquote:
 
 == external links ==
 
@@ -105,6 +96,8 @@ ftp://vim.org
 [[http://google.com]] 
 
 [[mailto:info@example.org|email me]]
+
+mailto:hello@bye.com
 
 == internal links ==
 
@@ -136,13 +129,13 @@ ftp://vim.org
 
 {{http://vimwiki.googlecode.com/hg/images/vimwiki_logo.png|Vimwiki}}
   
-{{http://.../vimwiki_logo.png|cool stuff|style="width:150px;height:120px;"}}
   
-{{http://.../vimwiki_logo.png||class="center flow blabla"}}
 
 [[http://someaddr.com/bigpicture.jpg|{{./movie.jpg}}]]
 
 == lists ==
+
+
 
 - Bulleted list item 1
 - Bulleted list item 2
@@ -152,66 +145,31 @@ ftp://vim.org
 * Bulleted list item 2
 
 
-1. Numbered list item 1
-2. Numbered list item 2
-3. Numbered list item 3
-
-4. Numbered list item 1
-5. Numbered list item 2
-6. Numbered list item 3
-
-1) Numbered list item 1
-2) Numbered list item 2
-3) Numbered list item 3
-
-a) Numbered list item 1
-b) Numbered list item 2
-c) Numbered list item 3
-
-A) Numbered list item 1
-B) Numbered list item 2
-C) Numbered list item 3
-
-i) Numbered list item 1
-ii) Numbered list item 2
-iii) Numbered list item 3
-
-I) Numbered list item 1
-II) Numbered list item 2
-III) Numbered list item 3
-
 # Bulleted list item 1
 # the # become numbers when converted to HTML
 
 - Bulleted list item 1
 - Bulleted list item 2
-a) Numbered list sub item 1
-b) more ...
-  * and more ...
-  * ...
-c) Numbered list sub item 3
-  1. Numbered list sub sub item 1
-  2. Numbered list sub sub item 2
-d) etc.
-- Bulleted list item 3
 
 * Item 1
 Item 1 continued line.
 Item 1 next continued line.
 * Item 2
-- Sub item 1
+    # Sub item 1
   Sub item 1 continued line.
-  Sub item 1 next continued line.
-- Sub item 2
-- etc.
-Continuation of Item 2
-Next continuation of Item 2
+%%comments
+    Sub item 1 next continued line.
+    * Sub item 2, as an ordered list item even though the identifier is `*`
+    * etc.
+ Continuation of Item 2
+ Next continuation of Item 2
+But this is a new paragraph.
 
-
-Term 1:: Definition 1
-Term 2::
-:: Definition 2
-:: Definition 3
+# 1
+    * `1.1`
+  * 2
+      * 2.1
+ * 3
 
 == math ==
 
@@ -242,17 +200,106 @@ $ \sum_i a_i^2 = 1 $
 | 1930 | _N/A_             | _N/A_              |
 | 1940 | -2                | 40                 |
 
-| a  | b  | c | d |
-| \/ | e  | > | f |
-| \/ | \/ | > | g |
-| h  | >  | > | > |
->
 
 == paragraphs ==
 
 This is first paragraph
 with two lines.
 
-This is a second paragraph with
-two lines.
 
+
+
+
+
+
+
+This is a second paragraph with
+two lines after many blank lines.
+
+== the todo mark ==
+TODO:
+
+= _*not implemented yet*_ =
+
+== sup, sub ==
+
+super^script^
+
+sub,,script,,
+
+== preformat with attributes ==
+
+ {{{class="python"
+ for i in range(1, 5):
+     print(i)
+ }}}
+ 
+== image with attributes ==
+{{http://.../vimwiki_logo.png|cool stuff|style="width:150px;height:120px;"}}
+
+{{http://.../vimwiki_logo.png||class="center flow blabla"}}
+
+== ordered lists with non-# identifiers ==
+1. Numbered list item 1
+2. Numbered list item 2
+3. Numbered list item 3
+
+4. Numbered list item 1
+5. Numbered list item 2
+6. Numbered list item 3
+
+1) Numbered list item 1
+2) Numbered list item 2
+3) Numbered list item 3
+
+a) Numbered list item 1
+b) Numbered list item 2
+c) Numbered list item 3
+
+A) Numbered list item 1
+B) Numbered list item 2
+C) Numbered list item 3
+
+i) Numbered list item 1
+ii) Numbered list item 2
+iii) Numbered list item 3
+
+I) Numbered list item 1
+II) Numbered list item 2
+III) Numbered list item 3
+
+c) Numbered list sub item 3
+  1. Numbered list sub sub item 1
+  2. Numbered list sub sub item 2
+d) etc.
+
+a) Numbered list sub item 1
+b) more ...
+  * and more ...
+  * ...
+- Bulleted list item 3
+
+== definition list ==
+
+Term 1:: Definition 1
+Term 2::
+:: Definition 2
+:: Definition 3
+
+== tables with spans ==
+| a  | b  | c | d |
+| \/ | e  | > | f |
+| \/ | \/ | > | g |
+| h  | >  | > | > |
+
+== centered tables ==
+ | a | b |
+ | c | d |
+ 
+== placeholders ==
+%title title
+%template template
+
+== todo lists ==
+* [ ] task 1
+* [ ] task 2
